# chatbot-fastapi

./: .env  pyproject.toml
src/chatbot_api/: __init__.py
