[project]
name = "chatbot-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MianAnwar", email = "miananwar.developer@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
chatbot-api = "chatbot_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
